// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack API create stack should handle creation api errors 1`] = `
Object {
  "name": "notebookName",
  "type": "jupyter",
}
`;

exports[`Stack API should handle deletion api errors 1`] = `
Object {
  "name": "notebookName",
}
`;

exports[`Stack API should handle deletion api errors 2`] = `[Error: Unable to delete Stack Error: Request failed with status code 404]`;

exports[`Stack API should send a deletion request and remove data store record 1`] = `[Error: Unable to create Stack Error: Request failed with status code 400]`;
